--- a/index.html
+++ b/index.html
@@ -14,37 +14,41 @@
 </head>
 <body>
     <header>
-        <div class="row no-gutters">
-            <a href="index.html" class="col-md-4 logo">
+       <div class="row">
+            <div class="col-md-4 logo">
+                <a href="index.html">
 
-            </a>
+                </a>
+
+            </div>
             <div class="col-md-8">
-                <div class="row bg-color-name-title no-gutters">
+                <div class="row bg-color-name-title">
                     <div class="col heading">
-                        <h1 class="name">Rosie Oblig</h1>
+                        <h1 class="name">Rosi odenlink</h1>
                         <h2 class="title">Full stake developer</h2>
                     </div>
                 </div>
-                <div class="row no-gutters">
+                <div class="row">
                     <div class="col">
-                        <ul id="nav" class="list-inline menucontainer">
-                            <li class="col-6 col-sm-3 ui-menu-home-color list-inline-item">
+                        <ul id="nav" class="list-inline">
+                            <li class="list-inline-item col-6 col-md-3 ui-menu-color-home menucontainer">
                                 <a href="#"><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-resume-color list-inline-item">
-                                <a href="#"><span>Resume</span></a>
+                            <li class="list-inline-item col-6 col-md-3 ui-menu-color-resume menucontainer">
+                                <a href="#"><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-contact-color list-inline-item">
-                                <a href="#"><span>Contact</span></a>
+                            <li class="list-inline-item col-6 col-md-3 ui-menu-color-contact menucontainer">
+                                <a href="#"><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-download-color list-inline-item">
-                                <a href="#"><span>Download</span></a>
+                            <li class="list-inline-item col-6 col-md-3 ui-menu-color-download menucontainer">
+                                <a href="#"><span>Home</span></a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-        </div>
+
+       </div>
        
     </header>
     <section>
