--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-       <div class="row">
+       <div class="row no-gutters">
             <div class="col-md-4 logo">
                 <a href="index.html">
 
@@ -22,26 +22,26 @@
 
             </div>
             <div class="col-md-8">
-                <div class="row bg-color-name-title">
+                <div class="row bg-color-name-title no-gutters">
                     <div class="col heading">
                         <h1 class="name">Rosi odenlink</h1>
                         <h2 class="title">Full stake developer</h2>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row no-gutters">
                     <div class="col">
-                        <ul id="nav" class="list-inline">
-                            <li class="list-inline-item col-6 col-md-3 ui-menu-color-home menucontainer">
-                                <a href="#"><span>Home</span></a>
+                        <ul id="nav" class="list-inline bit-right">
+                            <li class="list-inline-item col-6 col-sm-3 ui-menu-color-home menucontainer menuitem">
+                                <a href="#"><i class="fa fa-home"></i><span>Home</span></a>
                             </li>
-                            <li class="list-inline-item col-6 col-md-3 ui-menu-color-resume menucontainer">
-                                <a href="#"><span>Home</span></a>
+                            <li class="list-inline-item col-6 col-sm-3 ui-menu-color-resume menucontainer menuitem">
+                                <a href="#"><i class="fa fa-graduation-cap"></i><span>Resume</span></a>
                             </li>
-                            <li class="list-inline-item col-6 col-md-3 ui-menu-color-contact menucontainer">
-                                <a href="#"><span>Home</span></a>
+                            <li class="list-inline-item col-6 col-sm-3 ui-menu-color-contact menucontainer menuitem">
+                                <a href="#"><i class="fa fa-comment-o"></i><span>Contact</span></a>
                             </li>
-                            <li class="list-inline-item col-6 col-md-3 ui-menu-color-download menucontainer">
-                                <a href="#"><span>Home</span></a>
+                            <li class="list-inline-item col-6 col-sm-3 ui-menu-color-download menucontainer menuitem">
+                                <a href="#"><i class="fa fa-download"></i><span>Download</span></a>
                             </li>
                         </ul>
                     </div>
