--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
                     <div class="col">
                         <ul id="nav" class="list-inline bit-right">
                             <li class="list-inline-item col-6 col-sm-3 ui-menu-color-home menucontainer menuitem">
-                                <a href="#"><i class="fa fa-home"></i><span>Home</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home"></i><span>Home</span></a>
                             </li>
                             <li class="list-inline-item col-6 col-sm-3 ui-menu-color-resume menucontainer menuitem">
-                                <a href="#"><i class="fa fa-graduation-cap"></i><span>Resume</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"></i><span>Resume</span></a>
                             </li>
                             <li class="list-inline-item col-6 col-sm-3 ui-menu-color-contact menucontainer menuitem">
-                                <a href="#"><i class="fa fa-comment-o"></i><span>Contact</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o"></i><span>Contact</span></a>
                             </li>
                             <li class="list-inline-item col-6 col-sm-3 ui-menu-color-download menucontainer menuitem">
-                                <a href="#"><i class="fa fa-download"></i><span>Download</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download"></i><span>Download</span></a>
                             </li>
                         </ul>
                     </div>
