--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section>
 
     </section>
-    <footer class="container-fluid bg-color-footer footerstyle">
+    <footer id="footer-details" class="container-fluid bg-color-footer ">
         <div class="row ">
             <div class="col-md-4">
                 <h5 class="uppercase general-sub">about</h5>
@@ -66,7 +66,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="#" target="_blank" class="cv_pdf">
+                    <a href="#" target="_blank" class="cv-pdf">
                         <i class=" fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download</span>
                     </a>
