--- a/index.html
+++ b/index.html
@@ -51,8 +51,24 @@
        </div>
        
     </header>
-    <section>
-
+    <section class="container-fluid">
+        <div class="row row-table">
+            <div class="col-sm-8 bg-color-three-reasons section-column">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase">About-me</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2">
+                        <i class=" three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                    </div>
+                    <div class="col-10">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer id="footer-details" class="container-fluid bg-color-footer ">
         <div class="row ">
