--- a/index.html
+++ b/index.html
@@ -52,7 +52,14 @@
        
     </header>
     <section class="container-fluid">
-        <div class="row row-table">
+        <div class="row ">
+            <div class="col-md-4">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase"> personal info</h3>
+                    </div>
+                </div>
+            </div>
             <div class="col-sm-8 bg-color-three-reasons ">
                 <div class="row">
                     <div class="col">
