--- a/index.html
+++ b/index.html
@@ -53,10 +53,58 @@
     </header>
     <section class="container-fluid">
         <div class="row ">
-            <div class="col-md-4">
+            <div class="col-md-4 bg-color-personal-info section-column">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-12">
                         <h3 class="section-heading uppercase"> personal info</h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Name:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Rosi oklandik
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Address:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            4 myrtle square the coast
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Phone No:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            555 204 1973
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Email:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            mmm_hefnawy@yahoo.com
+                        </p>
                     </div>
                 </div>
             </div>
