--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                     <div class="col">
                         <ul id="nav" class="list-inline bit-right">
                             <li class="list-inline-item col-6 col-sm-3 ui-menu-color-home menucontainer menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home"></i><span>Home</span></a>
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home"></i><span>Home</span></a>
                             </li>
                             <li class="list-inline-item col-6 col-sm-3 ui-menu-color-resume menucontainer menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"></i><span>Resume</span></a>
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"></i><span>Resume</span></a>
                             </li>
                             <li class="list-inline-item col-6 col-sm-3 ui-menu-color-contact menucontainer menuitem">
                                 <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o"></i><span>Contact</span></a>
