--- a/resume.html
+++ b/resume.html
@@ -53,11 +53,15 @@
     </header>
     <section class="container-fluid">
         <div class="row ">
-            <div class="col-md-4 bg-color-personal-info section-column">
-                <div class="row">
+            <div class="col-md-4 bg-color-personal-info-resume section-column">
+                <div class="row bg-color-personal-info-resume">
                     <div class="col-12">
                         <h3 class="section-heading uppercase"> personal info</h3>
                     </div>
+                </div>
+                <div class="timeline-item" data-dates="02/1998 - 04/2004">
+                    <h4> National College of Art and Design</h4>
+                    <p class="personal-info-item"> Sculptor in residence </p>
                 </div>
             </div>
             <div class="col-sm-8 bg-color-three-reasons ">
